--- a/Overtime/Views/InAndOut/getInAndOutReport.cshtml
+++ b/Overtime/Views/InAndOut/getInAndOutReport.cshtml
@@ -7,73 +7,44 @@
     table td:hover {
         background-color: rgba(0,0,0,.075);
     }
+
+   
 </style>
+
 <div class="table-responsive">
-    
-    <table class="table text-nowrap table-bordered " id="mytable" style="width:100%;">
+    <table class="table text-nowrap table-bordered" id="mytable" style="width:100%;">
         <thead>
             <tr>
                 @foreach (DataColumn col in Model.Columns)
                 {
-                    if (@col.ColumnName != "Type")
+                    if (col.ColumnName != "Type")
                     {
-                    <th>@col.ColumnName</th>
+                        <th>@col.ColumnName</th>
                     }
-
                 }
-                <th></th>
-                
+                <th>Status</th>
             </tr>
-
         </thead>
         <tbody>
-            @{
-                foreach (DataRow row in Model.Rows)
-                {
-                         var TypeIn = "";
-                         var TypeOut = "";
-                         @if (@row["Type"].ToString() == "In")
-                         {
-                             TypeIn = "checked";
-                             TypeOut = "";
-                         }
-                         else
-                         {
-                             TypeIn = "checked";
-                             TypeOut = "checked";
-                         }
-                         <tr>
+            @foreach (DataRow row in Model.Rows)
+            {
+                var type = row["Type"].ToString();
+                var bgColor = type == "In" ? "p-3 mb-2 bg-success text-white" : "p-3 mb-2 bg-danger text-white";
+                var textClass = type == "In" ? "in-text" : "out-text";
 
-                            @foreach (DataColumn col in Model.Columns)
-                            {
-                                if (@col.ColumnName != "Type")
-                                {
-                                     <td> @row[col.ColumnName]</td>
-                                }
-
-                            }
-
-                         <td >
-                             <div class="container-fluid">
-                                
-                                 <div class="col-sm-6">
-                                     <label class="radio-inline">
-                                         <input type="radio" name="@string.Format("InAndOut{0}", @row["Id"])" @TypeIn value="In" onchange="changeInAndOut(@row["Id"])" disabled> &nbsp &nbsp &nbsp In
-                                     </label>
-                                 </div>
-                                 
-                                 <div class="col-sm-6">
-                                     <label class="radio-inline">
-                                         <input type="radio" name="@string.Format("InAndOut{0}", @row["Id"])" @TypeOut value="Out" onchange="changeInAndOut(@row["Id"])" disabled>&nbsp &nbsp &nbsp Out
-                                     </label>
-                                 </div>
-                             </div>
-                           
-                         </td>   
-                      
-                        </tr>
+                <tr>
+                    @foreach (DataColumn col in Model.Columns)
+                    {
+                        if (col.ColumnName != "Type")
+                        {
+                            <td>@row[col.ColumnName]</td>
+                        }
                     }
-                }
-            </tbody>
+                    <td class="@bgColor text-center">
+                        <span class="@textClass">@type</span>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
 </div>
