--- a/Overtime/Views/Attendance/Edit.cshtml
+++ b/Overtime/Views/Attendance/Edit.cshtml
@@ -32,6 +32,18 @@
                                     <span asp-validation-for="ip_address" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="machine_type" class="control-label"></label>
+                                    <input asp-for="machine_type" class="form-control" />
+                                    <span asp-validation-for="machine_type" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="campus_id" class="control-label"></label>
+                                    <select asp-for="campus_id" class="form-control" asp-items="@(new SelectList(ViewBag.CampusList,"c_id","c_name"))" required>
+                                        <option value="">Select Campus</option>
+                                    </select>
+                                    <span asp-validation-for="campus_id" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
                                     <input type="submit" value="Save" class="btn btn-primary" />
                                 </div>
                             </form>
@@ -39,7 +51,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Index">Back to List</a>
+                        <a asp-action="MachineDetail">Back to List</a>
                     </div>
                     </div>
                 </div>
