--- a/Overtime/Views/Attendance/MachineDetail.cshtml
+++ b/Overtime/Views/Attendance/MachineDetail.cshtml
@@ -32,6 +32,12 @@
                                         @Html.DisplayNameFor(model => model.ip_address)
                                     </th>
                                     <th>
+                                        @Html.DisplayNameFor(model => model.machine_type)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.campus_name)
+                                    </th>
+                                    <th>
                                         @Html.DisplayNameFor(model => model.created_at)
                                     </th>
                                     <th></th>
@@ -52,6 +58,12 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ip_address)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.machine_type)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.campus_name)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.created_at)
